# timed-task-tracker

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  models.py
frontend/: LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: TaskList.tsx
